<resources>
    <string name="app_name">POP Wallpapers UHD</string>
    <string name="todo">TODO</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="categories">Categories</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search...</string>
    <string name="morebtn">moreBtn</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>

    <!--share-->
    <string name="share_text">I would like to share this app with you. Here you can download this app on Google Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_nav_category">Category</string>
    <string name="title_nav_favorite">Your Favorite</string>
    <string name="no_favorite_found">Your favorite list is empty because you do not add any wallpapers in the favorite menu.</string>


    <!--network & error message-->
    <string name="whops">Whoops!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">There is a problem with your network or the server is down, try again later.</string>
    <string name="no_category_found">There doesn\'t seem to be a category available at the moment.</string>
    <string name="no_search_found">Search not found! if you want to continue the search, please try entering another keyword!</string>
    <string name="msg_no_item">There doesn\'t seem to be any content available at the moment.</string>
    <string name="msg_search_input">Please insert keyword!</string>
    <string name="btn_retry">RETRY</string>
    <string name="dialog_option_ok">OK</string>

    <!--wallpaper and category aspect ratio-->
    <string name="wallpaper_image_ratio_rectangle">H,1:1.5</string>
    <string name="wallpaper_image_ratio_square">H,1:1</string>
    <string name="category_image_ratio">H,2:1</string>


    <string name="title_set_action_info">Share</string>
    <string name="title_set_action_save">Save</string>
    <string name="title_set_action_apply">Apply</string>
    <string name="title_set_action_favorite">Favorite</string>


    <string name="dialog_set_title">Set As : </string>
    <string name="set_home_screen">Home Screen</string>
    <string name="set_lock_screen">Lock Screen</string>
    <string name="set_both">Home &amp; Lock Screens</string>
    <string name="set_crop">Crop</string>
    <string name="set_with">Set With&#8230;</string>
    <string name="option_yes">Yes</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="msg_loading_wallpaper">Loading Wallpaper&#8230;</string>
    <string name="msg_preparing_wallpaper">Preparing wallpaper&#8230;</string>
    <string name="msg_apply_wallpaper">Applying wallpaper&#8230;</string>
    <string name="btn_set_wallpaper">SET WALLPAPER</string>
    <string name="msg_title_success">Congratulations</string>
    <string name="msg_success_applied">Wallpaper applied successfully</string>
    <string name="msg_success_saved">Wallpaper saved successfully</string>
    <string name="btn_done">Done</string>
    <string name="snack_bar_failed">Wallpaper not set.</string>
    <string name="snack_bar_error">Failed! Please try again later.</string>
    <string name="snack_bar_saving">Saving wallpaper&#8230;</string>
    <string name="app_copyright">Welcome to POP Wallpaper App, where beauty meets technology. We\'re passionate e-programmers dedicated to delivering top-quality colorful wallpapers that match your style. From stunning landscapes to cutting-edge art, our wallpapers blend seamlessly with your devices, providing an immersive experience. Elevate your device\'s aesthetics with Wallpaper App. Join us in this journey of innovation.</string>

    <string name="banner1" translatable="false">ca-app-pub-2183499428262016/4646969867</string>
    <string name="banner2" translatable="false">ca-app-pub-2183499428262016/4646969867</string>
    <string name="rewarded1" translatable="false">ca-app-pub-2183499428262016/2897692355</string>
    <string name="interstital1" translatable="false">ca-app-pub-2183499428262016/6836937362</string>
</resources>